# pydanticai-researcher

./: crawler.py  main.py  pyproject.toml
storage/request_queues/default/: __metadata__.json
